<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/identselecservice"
                android:textSize="19sp"/>

            <!-- Contenedor 1 -->

            <ImageButton
                android:id="@+id/contenedor1"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/tratamientos"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:text="@string/tratamiento"
                android:textSize="16sp"/>


            <!-- Contenedor 2 -->

            <ImageButton
                android:id="@+id/contenedor2"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="390dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/planchado"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="610dp"
                android:layout_marginRight="14dp"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/alisado"
                android:textSize="16sp" />

            <!-- Contenedor 3 -->

            <ImageButton
                android:id="@+id/contenedor3"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="660dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/manicureimg"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="880dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:text="@string/manicure"
                android:textSize="16sp"/>

            <!-- Contenedor 4 -->

            <ImageButton
                android:id="@+id/contenedor4"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="930dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/ofertaimg"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1150dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="35dp"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:text="@string/promociones"
                android:textSize="16sp"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </ScrollView>



    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>